# sfml-enet-project

./: CMakeLists.txt
include/: GameNet.hpp
src/: GameNet.cpp  main.cpp
